# rustCrud

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.backend.prod  Dockerfile.frontend  Dockerfile.frontend.prod  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  seed_todos.sql
backend/: Cargo.toml  DDD_ARCHITECTURE.md
backend/migrations/: 20251125002155_create_todos_table.sql  20251125002200_seed_todos.sql  seed_todos.sql
backend/src/: db.rs  main.rs  models.rs  routes.rs
backend/src/application/todo/: dto.rs  mod.rs  service.rs
backend/src/domain/todo/: entity.rs  mod.rs  repository.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/persistence/: database.rs  mod.rs  todo_repository.rs
backend/src/presentation/: mod.rs
backend/src/presentation/api/: mod.rs  todo_handler.rs
frontend/: Cargo.toml  Trunk.toml  index.html  nginx.conf
frontend/src/: lib.rs  main.rs
