[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Actix-Web関連
actix-web = "4.4"
actix-cors = "0.7"

# データベース (SurrealDB v2)
surrealdb = { version = "2.0", features = ["protocol-http"] }

# シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 非同期ランタイム
tokio = { version = "1", features = ["full"] }

# その他
dotenvy = "0.15"
clap = { version = "4.5.53", features = ["derive"] }
async-trait = "0.1"
